Used wildcard type in Either for return types of all validators